# mdterm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bench_zai_models.py
demo/: er-diagram.md  mermaid-routing.md  sequence-diagram.md  state-diagram.md
docs/superpowers/plans/: 2026-06-08-mermaid-lr-layout-optimizer.md  2026-06-20-pos-highlighting.md  2026-06-21-state-diagram-render-fixes.md
docs/superpowers/specs/: 2026-06-08-mermaid-lr-layout-optimizer-design.md  2026-06-20-mermaid-native-graph-batch-design.md  2026-06-20-pos-highlighting-design.md  2026-06-21-state-diagram-render-fixes-design.md
examples/: convert_pos_model.rs
src/: config.rs  diagram.rs  export.rs  image.rs  json.rs  main.rs  markdown.rs  pos.rs  style.rs  theme.rs  viewer.rs
src/diagram/: canvas.rs  mod.rs  sequence.rs  theme.rs
src/diagram/graph/: class.rs  er.rs  flowchart.rs  mindmap.rs  mod.rs  state.rs
