[package]
name = "mdterm"
version = "2.0.0"
edition = "2024"
description = "A terminal-based Markdown viewer with syntax highlighting and interactive navigation"
license = "MIT"
repository = "https://github.com/bahdotsh/mdterm"
keywords = ["markdown", "terminal", "viewer", "tui", "cli"]
exclude = ["demo.gif", "demo.cast", "screenshots/", "test.md", "test_linked.md"]
categories = ["command-line-utilities"]

[dependencies]
pulldown-cmark = "0.11"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
open = "5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff"] }
libc = "0.2"
base64 = "0.22"
ureq = "3"
unicode-width = "0.2"
notify = "7"
serde_json = "1"
flate2 = { version = "1", optional = true }

[features]
pos = ["dep:flate2"]
